--- a/src/output.css
+++ b/src/output.css
@@ -24,6 +24,8 @@
     --text-base--line-height: calc(1.5 / 1);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-6xl: 3.75rem;
@@ -202,17 +204,8 @@
   .right-\[10\%\] {
     right: 10%;
   }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
   .bottom-3 {
     bottom: calc(var(--spacing) * 3);
-  }
-  .bottom-10 {
-    bottom: calc(var(--spacing) * 10);
-  }
-  .bottom-50 {
-    bottom: calc(var(--spacing) * 50);
   }
   .left-3 {
     left: calc(var(--spacing) * 3);
@@ -226,12 +219,6 @@
   .z-20 {
     z-index: 20;
   }
-  .row-span-1 {
-    grid-row: span 1 / span 1;
-  }
-  .row-span-2 {
-    grid-row: span 2 / span 2;
-  }
   .m-1 {
     margin: calc(var(--spacing) * 1);
   }
@@ -240,6 +227,15 @@
   }
   .my-25 {
     margin-block: calc(var(--spacing) * 25);
+  }
+  .my-30 {
+    margin-block: calc(var(--spacing) * 30);
+  }
+  .my-35 {
+    margin-block: calc(var(--spacing) * 35);
+  }
+  .my-40 {
+    margin-block: calc(var(--spacing) * 40);
   }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
@@ -265,11 +261,11 @@
   .ml-40 {
     margin-left: calc(var(--spacing) * 40);
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
-  }
-  .grid {
-    display: grid;
   }
   .table {
     display: table;
@@ -286,9 +282,17 @@
     width: calc(var(--spacing) * 7);
     height: calc(var(--spacing) * 7);
   }
+  .size-8 {
+    width: calc(var(--spacing) * 8);
+    height: calc(var(--spacing) * 8);
+  }
   .size-10 {
     width: calc(var(--spacing) * 10);
     height: calc(var(--spacing) * 10);
+  }
+  .size-15 {
+    width: calc(var(--spacing) * 15);
+    height: calc(var(--spacing) * 15);
   }
   .size-\[50\%\] {
     width: 50%;
@@ -306,26 +310,11 @@
   .h-1\.5 {
     height: calc(var(--spacing) * 1.5);
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
-  .h-2\/5 {
-    height: calc(2/5 * 100%);
-  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
-  .h-10\/12 {
-    height: calc(10/12 * 100%);
-  }
   .h-17 {
     height: calc(var(--spacing) * 17);
-  }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
   }
   .h-50 {
     height: calc(var(--spacing) * 50);
@@ -333,35 +322,8 @@
   .h-auto {
     height: auto;
   }
-  .h-dvh {
-    height: 100dvh;
-  }
   .h-full {
     height: 100%;
-  }
-  .h-lvh {
-    height: 100lvh;
-  }
-  .h-max {
-    height: max-content;
-  }
-  .h-svh {
-    height: 100svh;
-  }
-  .h-svw {
-    height: 100svw;
-  }
-  .max-h-11 {
-    max-height: calc(var(--spacing) * 11);
-  }
-  .max-h-11\/12 {
-    max-height: calc(11/12 * 100%);
-  }
-  .min-h-10 {
-    min-height: calc(var(--spacing) * 10);
-  }
-  .min-h-10\/12 {
-    min-height: calc(10/12 * 100%);
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
@@ -371,6 +333,9 @@
   }
   .w-1\/4 {
     width: calc(1/4 * 100%);
+  }
+  .w-1\/5 {
+    width: calc(1/5 * 100%);
   }
   .w-2 {
     width: calc(var(--spacing) * 2);
@@ -383,6 +348,12 @@
   }
   .w-2\/5 {
     width: calc(2/5 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
+  .w-3\/5 {
+    width: calc(3/5 * 100%);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
@@ -423,32 +394,17 @@
   .resize {
     resize: both;
   }
-  .grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
-  }
-  .grid-rows-3 {
-    grid-template-rows: repeat(3, minmax(0, 1fr));
-  }
   .flex-col {
     flex-direction: column;
   }
   .flex-wrap {
     flex-wrap: wrap;
   }
-  .place-items-end {
-    place-items: end;
-  }
   .items-center {
     align-items: center;
   }
   .items-end {
     align-items: flex-end;
-  }
-  .items-end-safe {
-    align-items: safe flex-end;
-  }
-  .items-stretch {
-    align-items: stretch;
   }
   .justify-baseline {
     justify-content: baseline;
@@ -461,12 +417,6 @@
   }
   .justify-end {
     justify-content: flex-end;
-  }
-  .justify-end-safe {
-    justify-content: safe flex-end;
-  }
-  .justify-items-end {
-    justify-items: end;
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
@@ -486,11 +436,14 @@
   .gap-15 {
     gap: calc(var(--spacing) * 15);
   }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
+  }
   .gap-x-10 {
     column-gap: calc(var(--spacing) * 10);
   }
-  .self-end {
-    align-self: flex-end;
+  .self-center {
+    align-self: center;
   }
   .rounded-4xl {
     border-radius: var(--radius-4xl);
@@ -592,11 +545,30 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-50 {
-    padding-block: calc(var(--spacing) * 50);
+  .py-60 {
+    padding-block: calc(var(--spacing) * 60);
+  }
+  .pt-50 {
+    padding-top: calc(var(--spacing) * 50);
+  }
+  .pt-60 {
+    padding-top: calc(var(--spacing) * 60);
+  }
+  .pb-20 {
+    padding-bottom: calc(var(--spacing) * 20);
+  }
+  .pb-30 {
+    padding-bottom: calc(var(--spacing) * 30);
+  }
+  .text-center {
+    text-align: center;
   }
   .font-\[poppins\] {
     font-family: poppins;
+  }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -697,8 +669,11 @@
   --gradient-azul: linear-gradient(to right, #00AAFF, #8617CF);
   --gradient-rosa: linear-gradient(to right, #8617CF, #FF00C8);
 }
-.retangulo {
+.retangulo1 {
   clip-path: polygon(100% 0%, 0 100%, 100% 100%);
+}
+.retangulo2 {
+  clip-path: polygon(0% 0%, 0 100%, 100% 0);
 }
 @property --tw-border-style {
   syntax: "*";
