--- a/src/output.css
+++ b/src/output.css
@@ -223,9 +223,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-100 {
-    top: calc(var(--spacing) * 100);
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -262,14 +259,8 @@
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
-  }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
   }
   .mt-15 {
     margin-top: calc(var(--spacing) * 15);
@@ -277,26 +268,8 @@
   .mt-\[-25\%\] {
     margin-top: -25%;
   }
-  .mt-\[17\.5px\] {
-    margin-top: 17.5px;
-  }
-  .mt-\[17px\] {
-    margin-top: 17px;
-  }
-  .mt-\[18px\] {
-    margin-top: 18px;
-  }
-  .mt-\[19px\] {
-    margin-top: 19px;
-  }
-  .mt-\[20px\] {
-    margin-top: 20px;
-  }
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
-  }
-  .block {
-    display: block;
   }
   .flex {
     display: flex;
@@ -363,12 +336,6 @@
   .w-2 {
     width: calc(var(--spacing) * 2);
   }
-  .w-2\/3 {
-    width: calc(2/3 * 100%);
-  }
-  .w-2\/4 {
-    width: calc(2/4 * 100%);
-  }
   .w-2\/5 {
     width: calc(2/5 * 100%);
   }
@@ -387,8 +354,20 @@
   .w-4\/5 {
     width: calc(4/5 * 100%);
   }
-  .w-fit {
-    width: fit-content;
+  .w-25 {
+    width: calc(var(--spacing) * 25);
+  }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
+  .w-35 {
+    width: calc(var(--spacing) * 35);
+  }
+  .w-45 {
+    width: calc(var(--spacing) * 45);
+  }
+  .w-65 {
+    width: calc(var(--spacing) * 65);
   }
   .w-full {
     width: 100%;
@@ -420,8 +399,8 @@
   .items-center {
     align-items: center;
   }
-  .justify-baseline {
-    justify-content: baseline;
+  .items-end {
+    align-items: flex-end;
   }
   .justify-between {
     justify-content: space-between;
@@ -429,8 +408,8 @@
   .justify-center {
     justify-content: center;
   }
-  .justify-end {
-    justify-content: flex-end;
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -472,25 +451,13 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-t-1 {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
-  .border-r-2 {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 2px;
-  }
   .border-b-1 {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
-  }
-  .border-b-2 {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 2px;
   }
   .border-l-1 {
     border-left-style: var(--tw-border-style);
@@ -502,29 +469,8 @@
   .bg-\[\#d1d1d1\] {
     background-color: #d1d1d1;
   }
-  .bg-\[\#d1d1d1\]\/20 {
-    background-color: color-mix(in oklab, #d1d1d1 20%, transparent);
-  }
-  .bg-\[\#d1d1d1\]\/50 {
-    background-color: color-mix(in oklab, #d1d1d1 50%, transparent);
-  }
-  .bg-\[\#d1d1d1\]\/70 {
-    background-color: color-mix(in oklab, #d1d1d1 70%, transparent);
-  }
-  .bg-\[\#d1d1d1\]\/80 {
-    background-color: color-mix(in oklab, #d1d1d1 80%, transparent);
-  }
-  .bg-\[\#d1d1d1\]\/90 {
-    background-color: color-mix(in oklab, #d1d1d1 90%, transparent);
-  }
-  .bg-\[\#e0e0e0\] {
-    background-color: #e0e0e0;
-  }
   .bg-\[\#e5e5e5\] {
     background-color: #e5e5e5;
-  }
-  .bg-\[\#eaeaea\] {
-    background-color: #eaeaea;
   }
   .bg-\[\#f0f0f0\] {
     background-color: #f0f0f0;
@@ -565,9 +511,6 @@
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
-  .p-1\.5 {
-    padding: calc(var(--spacing) * 1.5);
-  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
@@ -595,9 +538,6 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-6 {
-    padding-block: calc(var(--spacing) * 6);
-  }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
   }
@@ -615,9 +555,6 @@
   }
   .text-center {
     text-align: center;
-  }
-  .text-right {
-    text-align: right;
   }
   .font-\[poppins\] {
     font-family: poppins;
@@ -678,54 +615,12 @@
   .opacity-70 {
     opacity: 70%;
   }
-  .shadow-xl\/20 {
-    --tw-shadow-alpha: 20%;
-    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 20%)), 0 8px 10px -6px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 20%));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-2xl {
-    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-xl {
-    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[\#a5a5a5\] {
-    --tw-shadow-color: color-mix(in oklab, #a5a5a5 var(--tw-shadow-alpha), transparent);
-  }
   .shadow-\[\#b1b1b1\] {
     --tw-shadow-color: color-mix(in oklab, #b1b1b1 var(--tw-shadow-alpha), transparent);
-  }
-  .shadow-\[\#b1b11b\] {
-    --tw-shadow-color: color-mix(in oklab, #b1b11b var(--tw-shadow-alpha), transparent);
-  }
-  .shadow-\[\#c1c1c1\] {
-    --tw-shadow-color: color-mix(in oklab, #c1c1c1 var(--tw-shadow-alpha), transparent);
-  }
-  .shadow-\[\#c1c11c\] {
-    --tw-shadow-color: color-mix(in oklab, #c1c11c var(--tw-shadow-alpha), transparent);
-  }
-  .shadow-\[\#d1d1d1\] {
-    --tw-shadow-color: color-mix(in oklab, #d1d1d1 var(--tw-shadow-alpha), transparent);
-  }
-  .shadow-black {
-    --tw-shadow-color: color-mix(in srgb, #000 var(--tw-shadow-alpha), transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-shadow-color: color-mix(in oklab, var(--color-black) var(--tw-shadow-alpha), transparent);
-    }
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -761,9 +656,24 @@
       }
     }
   }
+  .sm\:mx-15 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 15);
+    }
+  }
+  .sm\:mx-20 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 20);
+    }
+  }
   .md\:col-span-2 {
     @media (width >= 48rem) {
       grid-column: span 2 / span 2;
+    }
+  }
+  .md\:mx-5 {
+    @media (width >= 48rem) {
+      margin-inline: calc(var(--spacing) * 5);
     }
   }
   .md\:mt-\[-20\%\] {
@@ -781,6 +691,31 @@
       width: calc(2/5 * 100%);
     }
   }
+  .md\:w-3\/5 {
+    @media (width >= 48rem) {
+      width: calc(3/5 * 100%);
+    }
+  }
+  .md\:w-3\/6 {
+    @media (width >= 48rem) {
+      width: calc(3/6 * 100%);
+    }
+  }
+  .md\:w-3\/7 {
+    @media (width >= 48rem) {
+      width: calc(3/7 * 100%);
+    }
+  }
+  .md\:w-4\/7 {
+    @media (width >= 48rem) {
+      width: calc(4/7 * 100%);
+    }
+  }
+  .md\:w-4\/9 {
+    @media (width >= 48rem) {
+      width: calc(4/9 * 100%);
+    }
+  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -794,11 +729,6 @@
   .md\:px-30 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 30);
-    }
-  }
-  .lg\:right-3 {
-    @media (width >= 64rem) {
-      right: calc(var(--spacing) * 3);
     }
   }
   .lg\:bottom-3 {
@@ -955,6 +885,16 @@
       width: calc(var(--spacing) * 5);
     }
   }
+  .xl\:w-55 {
+    @media (width >= 80rem) {
+      width: calc(var(--spacing) * 55);
+    }
+  }
+  .xl\:w-80 {
+    @media (width >= 80rem) {
+      width: calc(var(--spacing) * 80);
+    }
+  }
   .xl\:px-15 {
     @media (width >= 80rem) {
       padding-inline: calc(var(--spacing) * 15);
@@ -1046,6 +986,28 @@
 }
 .retangulo-fim {
   clip-path: polygon(50% 75%, 100% 0, 100% 100%, 0% 100%, 0 0);
+}
+#box-text-link {
+  overflow: hidden;
+}
+#depois {
+  bottom: 100%;
+  transition: bottom 0.5s;
+  position: absolute;
+}
+#text-link, #text-link-fill {
+  transition: 0.5s;
+  z-index: 10;
+}
+#box-text-link:hover #depois {
+  bottom: 5%;
+}
+#box-text-link:hover #text-link {
+  color: white;
+  stroke: white;
+}
+#box-text-link:hover #text-link-fill {
+  fill: white;
 }
 @property --tw-rotate-x {
   syntax: "*";
